--- a/less/components/headerbar.less
+++ b/less/components/headerbar.less
@@ -93,6 +93,7 @@
 	left: 0;
 	line-height: @headerbar-height;
 	height: @headerbar-height;
+	min-width: @headerbar-height;
 	padding-left: @gutter-base;
 	padding-right: @gutter-base;
 	position: absolute;
@@ -139,7 +140,7 @@
 		font-size: @ionicons-size-large;
 		margin-right: @gutter-base / 2;
 		position: relative;
-		top: 3px; // FIXME: magic numbers are bad, but I can't figure this one out...
+		top: 3px; // FIXME: magic numbers are bad
 	}
 }
 
